#############################################################################
# Copyright 1996-2017 Synopsys, Inc.                                        #
#                                                                           #
# This Synopsys software and all associated documentation are proprietary   #
# to Synopsys, Inc. and may only be used pursuant to the terms and          #
# conditions of a written license agreement with Synopsys, Inc.             #
# All other use, reproduction, modification, or distribution of the         #
# Synopsys software or the associated documentation is strictly prohibited. #
#############################################################################
##  Makefile.am --
##  Process this file with automake to produce a Makefile.in file.
##

SUBDIRS = \
	  ModelingObjects \
	  PV \
          scml2 \
	  scml2_logging \
          scml2_base \
	  scml_clock \
	  scml
